fixes release of information text wrap

--- a/client/stylesheets/imports/_layout.less
+++ b/client/stylesheets/imports/_layout.less
@@ -22,3 +22,8 @@
   display: inline-block;
   float: left;
 }
+
+.content-wrapper {
+  word-break: break-word;
+  word-wrap: break-word;
+}
